RESOLVED FIXED307434
StreamTeeState does not need to ref its branch streams
https://bugs.webkit.org/show_bug.cgi?id=307434
Summary StreamTeeState does not need to ref its branch streams
youenn fablet
Reported 2026-02-10 07:14:49 PST
StreamTeeState does not need to ref its branch streams
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-10 07:15:01 PST
youenn fablet
Comment 2 2026-02-10 07:22:15 PST
EWS
Comment 3 2026-02-11 02:05:08 PST
Committed 307241@main (a378e22f623e): <https://commits.webkit.org/307241@main> Reviewed commits have been landed. Closing PR #58301 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.