StreamTeeState does not need to ref its branch streams rdar://170057522 https://bugs.webkit.org/show_bug.cgi?id=307434

Reviewed by Chris Dumez.

It is unnecessary for StreamTeeUtilities to keep a RefPtr of branch1 and branch2.
We replace them with WeakPtr, which reduces potential ref cycles.

In the pull algorithm, we can dereference the WeakPtrs into Ref as the pull algorithm is called by the controller which is owned by the stream. This therefore means that the stream is alive at the time the pull algorithm is called.

Covered by existing tests.

Canonical link: https://commits.webkit.org/307241@main